# dumbnote

./: README.md  config.js  dumbnote.cabal  package.json  run_server  webpack.config.js
app/: package.json
app/src/: App.vue  dn-util.js  main.js  routes.js
app/src/components/: FolderTree.vue  MainView.vue  NoteCard.vue  NoteList.vue  NoteView.vue
app/src/components/LandingPageView/: Links.vue
server/: README.md  dumbnote.cabal
server/app/: Main.hs
server/app/DumbNote/: Server.hs  Worker.hs
server/app/DumbNote/Server/: Config.hs  Handler.hs
server/src/: DumbNote.hs
server/src/DumbNote/: Command.hs  Config.hs  Folder.hs  Metadata.hs  Note.hs  Session.hs  Store.hs  UniqueData.hs  Util.hs
server/src/DumbNote/Folder/: Metadata.hs
server/src/DumbNote/Store/: Config.hs
server/src/DumbNote/Util/: FileSystem.hs
server/test/: Spec.hs
server/test/DumbNote/: Test.hs  TestUtil.hs
server/test/DumbNote/Test/: Async.hs  Folder.hs  Metadata.hs
server/test/DumbNote/Test/Folder/: Metadata.hs
server/test/fixture/: sample.cfg  sample_mdfolder.yml
