name:                dumbnote
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/dumbnote#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DumbNote
                     , DumbNote.Command
                     , DumbNote.Config
                     , DumbNote.Folder
                     , DumbNote.Metadata
                     , DumbNote.Note
                     , DumbNote.Session
                     , DumbNote.Store
                     , DumbNote.Util
  build-depends:       base >= 4.7 && < 5
                     -- Start external dependencies
                     , aeson
                     , bytestring
                     , ConfigFile
                     , cryptohash
                     , directory
                     , filepath
                     , mtl
                     , stm
                     , text
                     , time
                     , uuid
  default-language:    Haskell2010

executable dumbnote-server
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       DumbNote.Server
                     , DumbNote.Server.Config
                     , DumbNote.Server.Handler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dumbnote
                     -- Start external dependencies
                     , aeson
                     , directory
                     , http-api-data
                     , servant-server
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite dumbnote-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       DumbNote.Test
                     , DumbNote.Test.Async
  build-depends:       base
                     , dumbnote
                     -- Start external dependencies
                     , async
                     , file-embed
                     , tasty
                     , tasty-hunit
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dumbnote
